--- a/frontend/server/package.json
+++ b/frontend/server/package.json
@@ -6,7 +6,9 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "multer": "1.4.5-lts.1"
   }
