--- a/py_interfaces/requirements.txt
+++ b/py_interfaces/requirements.txt
@@ -31,3 +31,232 @@ openai==1.64.0
 
 # Additional requirements for FastAPI
 python-multipart>=0.0.9
+
+# annotated-types==0.7.0
+# antlr-denter==1.3.1
+# antlr4-python3-runtime==4.9.3
+# anyio==4.8.0
+# automata-lib==9.0.0
+# beautifulsoup4==4.13.3
+# cached_method==0.1.0
+# certifi==2025.1.31
+# cffi==1.17.1
+# charset-normalizer==3.4.1
+# click==8.1.8
+# cryptography==44.0.2
+# distro==1.9.0
+# dotenv==0.9.9
+# fastapi==0.115.8
+# frozendict==2.4.6
+# greenlet==3.1.1
+# h11==0.14.0
+# harmony==1.2.4063
+# httpcore==1.0.7
+# httpx==0.28.1
+# idna==3.10
+# jiter==0.9.0
+# linkedin-api==2.3.1
+# lxml==5.3.1
+# MouseInfo==0.1.3
+# neo4j==5.28.1
+# networkx==3.4.2
+# numpy==2.2.4
+# openai==1.64.0
+# opencv-python==4.10.0.84
+# packaging==24.2
+# pandas==2.2.3
+# pdf2image==1.17.0
+# pdfminer.six==20250327
+# pdfplumber==0.11.6
+# pillow==11.2.1
+# plyer==2.1.0
+# PyAutoGUI==0.9.54
+# pycparser==2.22
+# pydantic==2.10.6
+# pydantic_core==2.27.2
+# pydot==3.0.4
+# pydruid==0.6.9
+# PyGetWindow==0.0.9
+# PyMonCtl==0.92
+# PyMsgBox==1.0.9
+# pyobjc==10.3.1
+# pyobjc-core==10.3.1
+# pyobjc-framework-Accessibility==10.3.1
+# pyobjc-framework-Accounts==10.3.1
+# pyobjc-framework-AddressBook==10.3.1
+# pyobjc-framework-AdServices==10.3.1
+# pyobjc-framework-AdSupport==10.3.1
+# pyobjc-framework-AppleScriptKit==10.3.1
+# pyobjc-framework-AppleScriptObjC==10.3.1
+# pyobjc-framework-ApplicationServices==10.3.1
+# pyobjc-framework-AppTrackingTransparency==10.3.1
+# pyobjc-framework-AudioVideoBridging==10.3.1
+# pyobjc-framework-AuthenticationServices==10.3.1
+# pyobjc-framework-AutomaticAssessmentConfiguration==10.3.1
+# pyobjc-framework-Automator==10.3.1
+# pyobjc-framework-AVFoundation==10.3.1
+# pyobjc-framework-AVKit==10.3.1
+# pyobjc-framework-AVRouting==10.3.1
+# pyobjc-framework-BackgroundAssets==10.3.1
+# pyobjc-framework-BrowserEngineKit==10.3.1
+# pyobjc-framework-BusinessChat==10.3.1
+# pyobjc-framework-CalendarStore==10.3.1
+# pyobjc-framework-CallKit==10.3.1
+# pyobjc-framework-CFNetwork==10.3.1
+# pyobjc-framework-Cinematic==10.3.1
+# pyobjc-framework-ClassKit==10.3.1
+# pyobjc-framework-CloudKit==10.3.1
+# pyobjc-framework-Cocoa==10.3.1
+# pyobjc-framework-Collaboration==10.3.1
+# pyobjc-framework-ColorSync==10.3.1
+# pyobjc-framework-Contacts==10.3.1
+# pyobjc-framework-ContactsUI==10.3.1
+# pyobjc-framework-CoreAudio==10.3.1
+# pyobjc-framework-CoreAudioKit==10.3.1
+# pyobjc-framework-CoreBluetooth==10.3.1
+# pyobjc-framework-CoreData==10.3.1
+# pyobjc-framework-CoreHaptics==10.3.1
+# pyobjc-framework-CoreLocation==10.3.1
+# pyobjc-framework-CoreMedia==10.3.1
+# pyobjc-framework-CoreMediaIO==10.3.1
+# pyobjc-framework-CoreMIDI==10.3.1
+# pyobjc-framework-CoreML==10.3.1
+# pyobjc-framework-CoreMotion==10.3.1
+# pyobjc-framework-CoreServices==10.3.1
+# pyobjc-framework-CoreSpotlight==10.3.1
+# pyobjc-framework-CoreText==10.3.1
+# pyobjc-framework-CoreWLAN==10.3.1
+# pyobjc-framework-CryptoTokenKit==10.3.1
+# pyobjc-framework-DataDetection==10.3.1
+# pyobjc-framework-DeviceCheck==10.3.1
+# pyobjc-framework-DictionaryServices==10.3.1
+# pyobjc-framework-DiscRecording==10.3.1
+# pyobjc-framework-DiscRecordingUI==10.3.1
+# pyobjc-framework-DiskArbitration==10.3.1
+# pyobjc-framework-DVDPlayback==10.3.1
+# pyobjc-framework-EventKit==10.3.1
+# pyobjc-framework-ExceptionHandling==10.3.1
+# pyobjc-framework-ExecutionPolicy==10.3.1
+# pyobjc-framework-ExtensionKit==10.3.1
+# pyobjc-framework-ExternalAccessory==10.3.1
+# pyobjc-framework-FileProvider==10.3.1
+# pyobjc-framework-FileProviderUI==10.3.1
+# pyobjc-framework-FinderSync==10.3.1
+# pyobjc-framework-FSEvents==10.3.1
+# pyobjc-framework-GameCenter==10.3.1
+# pyobjc-framework-GameController==10.3.1
+# pyobjc-framework-GameKit==10.3.1
+# pyobjc-framework-GameplayKit==10.3.1
+# pyobjc-framework-HealthKit==10.3.1
+# pyobjc-framework-ImageCaptureCore==10.3.1
+# pyobjc-framework-InputMethodKit==10.3.1
+# pyobjc-framework-InstallerPlugins==10.3.1
+# pyobjc-framework-InstantMessage==10.3.1
+# pyobjc-framework-Intents==10.3.1
+# pyobjc-framework-IntentsUI==10.3.1
+# pyobjc-framework-IOBluetooth==10.3.1
+# pyobjc-framework-IOBluetoothUI==10.3.1
+# pyobjc-framework-IOSurface==10.3.1
+# pyobjc-framework-iTunesLibrary==10.3.1
+# pyobjc-framework-KernelManagement==10.3.1
+# pyobjc-framework-LatentSemanticMapping==10.3.1
+# pyobjc-framework-LaunchServices==10.3.1
+# pyobjc-framework-libdispatch==10.3.1
+# pyobjc-framework-libxpc==10.3.1
+# pyobjc-framework-LinkPresentation==10.3.1
+# pyobjc-framework-LocalAuthentication==10.3.1
+# pyobjc-framework-LocalAuthenticationEmbeddedUI==10.3.1
+# pyobjc-framework-MailKit==10.3.1
+# pyobjc-framework-MapKit==10.3.1
+# pyobjc-framework-MediaAccessibility==10.3.1
+# pyobjc-framework-MediaLibrary==10.3.1
+# pyobjc-framework-MediaPlayer==10.3.1
+# pyobjc-framework-MediaToolbox==10.3.1
+# pyobjc-framework-Metal==10.3.1
+# pyobjc-framework-MetalFX==10.3.1
+# pyobjc-framework-MetalKit==10.3.1
+# pyobjc-framework-MetalPerformanceShaders==10.3.1
+# pyobjc-framework-MetalPerformanceShadersGraph==10.3.1
+# pyobjc-framework-MetricKit==10.3.1
+# pyobjc-framework-MLCompute==10.3.1
+# pyobjc-framework-ModelIO==10.3.1
+# pyobjc-framework-MultipeerConnectivity==10.3.1
+# pyobjc-framework-NaturalLanguage==10.3.1
+# pyobjc-framework-NetFS==10.3.1
+# pyobjc-framework-Network==10.3.1
+# pyobjc-framework-NetworkExtension==10.3.1
+# pyobjc-framework-NotificationCenter==10.3.1
+# pyobjc-framework-OpenDirectory==10.3.1
+# pyobjc-framework-OSAKit==10.3.1
+# pyobjc-framework-OSLog==10.3.1
+# pyobjc-framework-PassKit==10.3.1
+# pyobjc-framework-PencilKit==10.3.1
+# pyobjc-framework-PHASE==10.3.1
+# pyobjc-framework-Photos==10.3.1
+# pyobjc-framework-PhotosUI==10.3.1
+# pyobjc-framework-PreferencePanes==10.3.1
+# pyobjc-framework-PushKit==10.3.1
+# pyobjc-framework-Quartz==10.3.1
+# pyobjc-framework-QuickLookThumbnailing==10.3.1
+# pyobjc-framework-ReplayKit==10.3.1
+# pyobjc-framework-SafariServices==10.3.1
+# pyobjc-framework-SafetyKit==10.3.1
+# pyobjc-framework-SceneKit==10.3.1
+# pyobjc-framework-ScreenCaptureKit==10.3.1
+# pyobjc-framework-ScreenSaver==10.3.1
+# pyobjc-framework-ScreenTime==10.3.1
+# pyobjc-framework-ScriptingBridge==10.3.1
+# pyobjc-framework-SearchKit==10.3.1
+# pyobjc-framework-Security==10.3.1
+# pyobjc-framework-SecurityFoundation==10.3.1
+# pyobjc-framework-SecurityInterface==10.3.1
+# pyobjc-framework-SensitiveContentAnalysis==10.3.1
+# pyobjc-framework-ServiceManagement==10.3.1
+# pyobjc-framework-SharedWithYou==10.3.1
+# pyobjc-framework-SharedWithYouCore==10.3.1
+# pyobjc-framework-ShazamKit==10.3.1
+# pyobjc-framework-Social==10.3.1
+# pyobjc-framework-SoundAnalysis==10.3.1
+# pyobjc-framework-Speech==10.3.1
+# pyobjc-framework-SpriteKit==10.3.1
+# pyobjc-framework-StoreKit==10.3.1
+# pyobjc-framework-Symbols==10.3.1
+# pyobjc-framework-SyncServices==10.3.1
+# pyobjc-framework-SystemConfiguration==10.3.1
+# pyobjc-framework-SystemExtensions==10.3.1
+# pyobjc-framework-ThreadNetwork==10.3.1
+# pyobjc-framework-UniformTypeIdentifiers==10.3.1
+# pyobjc-framework-UserNotifications==10.3.1
+# pyobjc-framework-UserNotificationsUI==10.3.1
+# pyobjc-framework-VideoSubscriberAccount==10.3.1
+# pyobjc-framework-VideoToolbox==10.3.1
+# pyobjc-framework-Virtualization==10.3.1
+# pyobjc-framework-Vision==10.3.1
+# pyobjc-framework-WebKit==10.3.1
+# pyparsing==3.2.1
+# pypdfium2==4.30.1
+# pyperclip==1.9.0
+# PyRect==0.2.0
+# PyScreeze==0.1.30
+# pytesseract==0.3.13
+# python-dateutil==2.9.0.post0
+# python-dotenv==1.0.1
+# python-multipart==0.0.20
+# pytweening==1.2.0
+# pytz==2025.1
+# PyWinBox==0.7
+# PyWinCtl==0.4
+# requests==2.32.3
+# rubicon-objc==0.4.9
+# scipy==1.15.2
+# setuptools==70.2.0
+# six==1.17.0
+# sniffio==1.3.1
+# soupsieve==2.6
+# SQLAlchemy==2.0.40
+# starlette==0.45.3
+# tqdm==4.67.1
+# typing_extensions==4.12.2
+# tzdata==2025.2
+# urllib3==2.3.0
+# uvicorn==0.34.0
